fix spacing between buttons in APagniation component (#201)

--- a/framework/components/APagination/APagination.scss
+++ b/framework/components/APagination/APagination.scss
@@ -73,6 +73,10 @@
       border: 2px solid transparent !important;
       background-color: transparent !important;
       font-weight: 400;
+      margin-right: 4px;
+      &:last-child {
+        margin-right: 0;
+      }
     }
   }
 
